--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.18.0",
     "bluebird": "^3.5.1",
     "chalk": "^2.3.1",
+    "deep-get-set": "^1.1.0",
     "jsonpath": "^1.0.0",
     "lodash": "^4.17.5"
   },
