--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "bluebird": "^3.5.1",
     "chalk": "^2.3.1",
     "deep-get-set": "^1.1.0",
+    "google-spreadsheet": "^2.0.4",
+    "json2csv": "^4.0.2",
     "jsonpath": "^1.0.0",
     "lex": "^1.7.9",
     "lodash": "^4.17.5",
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "eslint-config-standard": "^11.0.0",
     "mocha": "^5.0.1",
     "moxios": "^0.4.0",
     "sinon": "^4.4.2"
