--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bluebird": "^3.5.1",
     "chalk": "^2.3.1",
     "deep-get-set": "^1.1.0",
+    "dotty": "^0.1.0",
     "google-spreadsheet": "^2.0.4",
     "json2csv": "^4.0.2",
     "jsonpath": "^1.0.0",
