--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   "author": "Emmanuel Pire <piremmanuel@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "bluebird": "^3.5.1",
     "chalk": "^2.3.1",
     "deep-get-set": "^1.1.0",
     "dotty": "^0.1.0",
-    "google-spreadsheet": "^2.0.4",
-    "json2csv": "^4.0.2",
-    "jsonpath": "^1.0.0",
+    "google-spreadsheet": "^2.0.7",
+    "json2csv": "^4.5.1",
+    "jsonpath-plus": "^0.20.1",
     "lex": "^1.7.9",
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.11",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
